apis: finish api docs
